# wintem_F300

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.html  methodology.html  publishing.html
docs/assets/: lightbox.js  style.css
docs/data/: resultados_eta_f300.csv  resumen_eta_por_boletin.csv
examples/: wintem_f300_example.txt
src/wintem_f300/: __init__.py  __main__.py  export.py  plotting.py  static_site.py
src/wintem_f300/core/: __init__.py  analysis.py  parser.py
src/wintem_f300/gui/: __init__.py  app.py
src/wintem_f300_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_analysis.py  test_parser.py
